// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`solutions list page should render the content for capabilities-selector filter type 1`] = `
"<main class=\\"nhsuk-main-wrapper\\" id=\\"maincontent\\" data-test-id=\\"main-content\\">

    
  <div class=\\"nhsuk-grid-row nhsuk-width-container\\" data-test-id=\\"solutions-list-body\\">

    <div class=\\"nhsuk-u-padding-top-5\\" data-test-id=\\"go-back-link\\">
      <div class=\\"nhsuk-back-link\\">
  <a class=\\"nhsuk-back-link__link\\" href=\\"#\\">
  <svg class=\\"nhsuk-icon nhsuk-icon__chevron-left\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\" height=\\"24\\" width=\\"24\\">
    <path d=\\"M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z\\"></path>
  </svg>
  Go back</a>
</div>

    </div>

    
  <div class=\\"nhsuk-grid-row\\" data-test-id=\\"general-description\\">
    <div class=\\"nhsuk-grid-column-two-thirds\\">
      
        <h1 class=\\"nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-3\\">GP IT Futures framework – results</h1>
      
      
        <p class=\\"nhsuk-heading-l nhsuk-u-font-size-22\\">These are the Catalogue Solutions available on the GP IT Futures framework that match your search criteria.</p>
      
    </div>
  </div>



    

    
      <div class=\\"nhsuk-grid-row\\">
        <div data-test-id=\\"compare-solutions-description\\" class=\\"nhsuk-u-font-size-22 nhsuk-grid-column-two-thirds\\">You can use our compare document to help find what you’re looking for. It gives an overview of all the Catalogue Solutions available on the GP IT Futures framework and lets you filter them by the Capabilities they offer.</div>
          <div data-test-id=\\"compare-button\\" class=\\"nhsuk-grid-column-two-thirds nhsuk-u-margin-top-5\\">
            


  
    
  




<a class=\\"nhsuk-button nhsuk-button--secondary\\" href=\\"/solutions/compare/document\\" draggable=\\"false\\">
  Compare Solutions (.xlsx)
</a>



          </div>
        </div>
      </div>
    

    <div data-test-id=\\"solution-cards\\" class=\\"nhsuk-u-margin-bottom-7 nhsuk-u-margin-top-7\\">
      
      <div class=\\"bc-t-border-top--blue\\">
    </div>
  </div>


  </main>"
`;

exports[`solutions list page should render the content for foundation filter type 1`] = `
"<main class=\\"nhsuk-main-wrapper\\" id=\\"maincontent\\" data-test-id=\\"main-content\\">

    
  <div class=\\"nhsuk-grid-row nhsuk-width-container\\" data-test-id=\\"solutions-list-body\\">

    <div class=\\"nhsuk-u-padding-top-5\\" data-test-id=\\"go-back-link\\">
      <div class=\\"nhsuk-back-link\\">
  <a class=\\"nhsuk-back-link__link\\" href=\\"#\\">
  <svg class=\\"nhsuk-icon nhsuk-icon__chevron-left\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\" height=\\"24\\" width=\\"24\\">
    <path d=\\"M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z\\"></path>
  </svg>
  Go back</a>
</div>

    </div>

    
  <div class=\\"nhsuk-grid-row\\" data-test-id=\\"general-description\\">
    <div class=\\"nhsuk-grid-column-two-thirds\\">
      
        <h1 class=\\"nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-3\\">Foundation Solution Sets on the GP IT Futures framework – results</h1>
      
      
        <p class=\\"nhsuk-heading-l nhsuk-u-font-size-22\\">These Catalogue Solutions meet the 6 Foundation Capabilities that are the minimum requirement to enable a GP practice to operate.</p>
      
    </div>
  </div>



    

    

    <div data-test-id=\\"solution-cards\\" class=\\"nhsuk-u-margin-bottom-7 nhsuk-u-margin-top-7\\">
      
      <div class=\\"bc-t-border-top--blue\\">
    </div>
  </div>


  </div></main>"
`;
